first cut at es6

--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -12,8 +12,5 @@
         "./**/*.ts",
         "!./node_modules/**/*.ts"
     ],
-    "files": [
-        "./es6/test.ts",
-        "./testing.ts"
-    ]
+    "files": []
 }
