classes and arrow functions

--- a/code/es6/classes/tsconfig.json
+++ b/code/es6/classes/tsconfig.json
@@ -13,8 +13,6 @@
         "!./node_modules/**/*.ts"
     ],
     "files": [
-        "./es6/classes/class.ts",
-        "./es6/test.ts",
-        "./testing.ts"
+        "./class.ts"
     ]
 }
