--- a/code/tsconfig.json
+++ b/code/tsconfig.json
@@ -15,6 +15,7 @@
     "files": [
         "./es6/classes/class.ts",
         "./es6/destructuring.ts",
+        "./es6/forof.ts",
         "./es6/let.ts",
         "./es6/test.ts",
         "./testing.ts"
