--- a/code/tsconfig.json
+++ b/code/tsconfig.json
@@ -15,9 +15,10 @@
     "files": [
         "./es6/classes/class.ts",
         "./es6/destructuring.ts",
-        "./es6/forof.ts",
+        "./es6/for..of.ts",
         "./es6/let.ts",
-        "./es6/templatestrings.ts",
+        "./es6/rest-parameters.ts",
+        "./es6/template-strings.ts",
         "./es6/test.ts",
         "./testing.ts"
     ]
