--- a/code/tsconfig.json
+++ b/code/tsconfig.json
@@ -14,7 +14,9 @@
     ],
     "files": [
         "./declarationspaces/declarationspace.ts",
+        "./es6/classes/abstract.ts",
         "./es6/classes/class.ts",
+        "./es6/classes/super.ts",
         "./es6/destructuring.ts",
         "./es6/for..of.ts",
         "./es6/let.ts",
@@ -24,6 +26,7 @@
         "./es6/test.ts",
         "./testing.ts",
         "./tips/mixins.ts",
+        "./types/assertion.ts",
         "./types/lib/exclude/nolibd.ts",
         "./types/lib/usage/libd.ts",
         "./types/types.ts"
