--- a/code/compiler/scanner/tsconfig.json
+++ b/code/compiler/scanner/tsconfig.json
@@ -21,6 +21,7 @@
     ],
     "files": [
         "./runScanner.ts",
+        "./runScannerWithPositions.ts",
         "./typings/node/node.d.ts",
         "./typings/tsd.d.ts"
     ]
