publish so that I can read it

--- a/code/compiler/tsconfig.json
+++ b/code/compiler/tsconfig.json
@@ -20,6 +20,7 @@
         "!./node_modules/**/*"
     ],
     "files": [
+        "./parser/runParser.ts",
         "./scanner/runScanner.ts",
         "./scanner/runScannerWithPositions.ts",
         "./typings/node/node.d.ts",
