Update stateful functions closes https://github.com/basarat/typescript-book/issues/44

--- a/code/tips/tsconfig.json
+++ b/code/tips/tsconfig.json
@@ -24,5 +24,8 @@
         "nominalTyping.ts",
         "statefulFunctions.ts"
     ],
-    "exclude": []
+    "exclude": [],
+    "atom": {
+        "rewriteTsconfig": true
+    }
 }
