tips : currying and bind

--- a/code/tips/tsconfig.json
+++ b/code/tips/tsconfig.json
@@ -20,6 +20,8 @@
         "!node_modules/**"
     ],
     "files": [
+        "bindIsBad.ts",
+        "currying.ts",
         "mixins.ts",
         "nominalTyping.ts",
         "statefulFunctions.ts"
