--- a/code/types/tsconfig.json
+++ b/code/types/tsconfig.json
@@ -25,6 +25,7 @@
         "./lib/exclude/nolibd.ts",
         "./lib/usage/libd.ts",
         "./migrating/migrating.ts",
+        "./typeGuard.ts",
         "./types.ts"
     ],
     "atom": {
