lazy object literal init

--- a/code/tips/tsconfig.json
+++ b/code/tips/tsconfig.json
@@ -22,6 +22,7 @@
     "files": [
         "bindIsBad.ts",
         "currying.ts",
+        "lazyObjectLiteralInitialization.ts",
         "mixins.ts",
         "nominalTyping.ts",
         "statefulFunctions.ts"
