:memo: string literal type

--- a/code/tips/tsconfig.json
+++ b/code/tips/tsconfig.json
@@ -25,7 +25,8 @@
         "lazyObjectLiteralInitialization.ts",
         "mixins.ts",
         "nominalTyping.ts",
-        "statefulFunctions.ts"
+        "statefulFunctions.ts",
+        "stringEnums.ts"
     ],
     "exclude": [],
     "atom": {
