--- a/code/types/tsconfig.json
+++ b/code/types/tsconfig.json
@@ -22,6 +22,7 @@
     "files": [
         "./assertion.ts",
         "./freshness/freshness.ts",
+        "./functions.ts",
         "./lib/exclude/nolibd.ts",
         "./lib/usage/libd.ts",
         "./migrating/migrating.ts",
