classes are awesome

--- a/code/tips/tsconfig.json
+++ b/code/tips/tsconfig.json
@@ -21,6 +21,7 @@
     ],
     "files": [
         "bindIsBad.ts",
+        "classesAreAwesome.ts",
         "currying.ts",
         "lazyObjectLiteralInitialization.ts",
         "mixins.ts",
