dedicated section for generics

--- a/code/types/tsconfig.json
+++ b/code/types/tsconfig.json
@@ -22,7 +22,9 @@
     "files": [
         "./assertion.ts",
         "./freshness/freshness.ts",
+        "./freshness/index-signatures.ts",
         "./functions.ts",
+        "./generics.ts",
         "./interfaces.ts",
         "./lib/exclude/nolibd.ts",
         "./lib/usage/libd.ts",
