--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-.alm
+# Mac 
 *.DS_Store
+
+# IDEs
+.alm
+.vscode
+
 
 # Node rules:
 ## Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
