--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,19 +12,19 @@ jobs:
       steps:
         - uses: actions/checkout@v2
           
-       # - name: Create Pull Request
-       #   id: cpr
-       #   uses: peter-evans/create-pull-request@v2.8.0
-       #   with: 
-       #     commit-message: Add report file
-       #     committer: GitHub <noreply@github.com>
-       #     author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
-       #     title: '[Example] Add report file'
-       #     body: |
-       #       New report
-       #     draft: false
-       #     branch: russian
-       #     request-to-parent: false
+        - name: Create Pull Request
+          id: cpr
+          uses: peter-evans/create-pull-request@v2.8.0
+          with: 
+            commit-message: Add report file
+            committer: GitHub <noreply@github.com>
+            author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
+            title: '[Example] Add report file'
+            body: |
+              New report
+            draft: false
+            branch: russian
+            request-to-parent: false
         - name: Check outputs
           run: |
             echo "Pull Request Number"
