--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,20 +6,20 @@ on:
       - test.md
  
 jobs:
-    pull-request:
+    pullrequest:
       runs-on: ubuntu-latest
       # if: contains(github.event.head_commit.message, 'Done')
       steps:
         - uses: actions/checkout@v2
           
-        - name: pull-request
-          uses: repo-sync/pull-request@v2
-          with: 
-            destination_branch: 'russian1'
-            pr_title: '[Example] Add report file'
-            pr_body: |
-              New report
-            pr-draft: true
+        #- name: pull-request
+        #  uses: repo-sync/pull-request@v2
+        #  with: 
+        #    destination_branch: 'russian1'
+        #    pr_title: '[Example] Add report file'
+        #    pr_body: |
+        #      New report
+        #    pr-draft: true
         - name: Check outputs
           run: |
             echo "Pull Request Number"
