--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -6,8 +6,7 @@ name: CI
 # events but only for the master branch
 on:
   push:
-    branches:
-      - test.md
+    branches: [ test.md ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
