--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,14 +12,14 @@ jobs:
       steps:
         - uses: actions/checkout@v2
           
-        #- name: pull-request
-        #  uses: repo-sync/pull-request@v2
-        #  with: 
-        #    destination_branch: 'russian1'
-        #    pr_title: '[Example] Add report file'
-        #    pr_body: |
-        #      New report
-        #    pr-draft: true
+        - name: pull-request
+          uses: repo-sync/pull-request@v2
+          with: 
+            destination_branch: 'russian1'
+            pr_title: '[Example] Add report file'
+            pr_body: |
+              New report
+            pr-draft: true
         - name: Check outputs
           run: |
             echo "Pull Request Number"
