--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - master
+  pull_request:
+     branches:
+       - master
 
 jobs:
   build:
@@ -16,7 +19,7 @@ jobs:
         with:
           node-version: '12.18.2'
       - run: sudo apt update
-      - run: sudo apt install calibre-bin
+      - run: sudo -v && wget -nv -O- https://download.calibre-ebook.com/linux-installer.sh | sudo sh /dev/stdin
       - run: sudo npm install -g gitbook-cli
       - run: gitbook install
       - run: mkdir output
