--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,12 +14,14 @@ jobs:
     env:
       SHA: ${{ github.sha }}
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: '12.18.2'
+          node-version: 16
       - run: sudo apt update
-      - run: sudo -v && wget -nv -O- https://download.calibre-ebook.com/linux-installer.sh | sudo sh /dev/stdin
+      - run: sudo apt install python3
+      - run: sudo apt-get install -y calibre
+      #- run: sudo -v && wget -nv -O- https://download.calibre-ebook.com/linux-installer.sh | sudo sh /dev/stdin
       - run: sudo npm install -g gitbook-cli
       - run: gitbook install
       - run: mkdir output
@@ -27,17 +29,17 @@ jobs:
       - run: gitbook epub . ./output/typescript-book-${SHA}.epub
       - run: gitbook mobi . ./output/typescript-book-${SHA}.mobi
       - name: upload pdf artifact
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
           name: typescript-book.pdf
           path: output/typescript-book-${{ env.SHA }}.pdf
       - name: upload epub artifact
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
           name: typescript-book.epub
           path: output/typescript-book-${{ env.SHA }}.epub
       - name: upload mobi artifact
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
           name: typescript-book.mobi
           path: output/typescript-book-${{ env.SHA }}.mobi
