--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,13 +18,20 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: sudo apt-get install -y calibre
+      # required for calibre installation
+      - run: |
+          sudo add-apt-repository ppa:apt-fast/stable
+          sudo apt-get update
+          sudo apt-get install -y apt-fast
+          sudo apt-fast update
+          sudo apt-fast install -y python3 calibre
+      # - run: sudo apt-get install -y python3
+      # - run: sudo apt-get install -y calibre
       # gitbook replaced by https://github.com/honkit/honkit
       - run: |
           npm install -g honkit
           npm install -g gitbook-plugin-edit-link
           npm install -g gitbook-plugin-github
-          npm install -g gitbook-plugin-google-adsense
           npm install -g gitbook-plugin-header
       # Compose books: https://honkit.netlify.app/ebook.html
       - run: |
